[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/Rooms map/roommap.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Roommap.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Tiles/Door.tscn" type="PackedScene" id=3]

[node name="roommap" type="Sprite" index="0"]

texture = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Door1" parent="." index="0" instance=ExtResource( 3 )]

position = Vector2( 0, 23 )

[node name="Door2" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( -43, 0.282808 )
rotation = 1.5708

[node name="Door3" parent="." index="2" instance=ExtResource( 3 )]

position = Vector2( -3.8147e-006, -23 )
rotation = 3.14159

[node name="Door4" parent="." index="3" instance=ExtResource( 3 )]

position = Vector2( 42.5069, 0.0626717 )
rotation = 4.71239


